converted tests to junit5